[package]
name = "orom-second-encounter"
version = "0.1.0"
authors = ["madwareru <madware.ru@gmail.com>"]
edition = "2018"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle.example.play_smacker]
name = "play_smacker"
identifier = "io.github.madwareru.play-smacker"
short_description = "play intro from rage of mages game"
long_description = ""

[dependencies]
rom-res-rs = { git = "https://github.com/madwareru/rom-res-rs", version = "0.1.9"}
rom-media-rs = { git = "https://github.com/madwareru/rom-media-rs", version = "0.6.34" }
rom-loaders-rs = { git = "https://github.com/madwareru/rom-loaders-rs", version = "0.4.30"}
simple-tiled-wfc = {git = "https://github.com/madwareru/simple-tiled-wfc.git", version = "0.5.5" }
rand = "0.7"
miniquad = "0.3.0-alpha.30"
bytemuck = "1.4.1"
bitsetium = "0.0.0"
egui-miniquad = "0.5.0"
egui = "0.13.0"