[package]
name = "generate_map"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rom-res-rs = { git = "https://github.com/madwareru/rom-res-rs", version = "0.1.9"}
rom-media-rs = { git = "https://github.com/madwareru/rom-media-rs", version = "0.6.34" }
rom-loaders-rs = { git = "https://github.com/madwareru/rom-loaders-rs", version = "0.4.30"}
orom-miniquad = { git = "https://github.com/madwareru/orom-miniquad", version = "0.2.0"}
egui-integration = { path = "egui-integration" }
simple-tiled-wfc = "0.7.5"
rand = "0.7"
bytemuck = "1.4.1"
bitsetium = "0.0.0"
egui = "0.13.0"