[package]
name = "egui-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orom-miniquad = { git = "https://github.com/madwareru/orom-miniquad", version = "0.2.0"}
egui = "0.13.0"
quad-url = "0.1.0"

# https://github.com/not-fl3/miniquad/issues/172
[target.'cfg(target_os = "macos")'.dependencies]
copypasta = "0.7"
